[GR-73222] Move exact reachability metadata selection to run time